--- a/install/.Bash-utils/config/modules/main/Status.conf
+++ b/install/.Bash-utils/config/modules/main/Status.conf
@@ -1,7 +1,7 @@
 #!/usr/bin/env bash
 
 # These status variable can be changed anywhere in the main script, except for the following variables :
-#   - __BU_MOD_MAIN_STAT_DEBUG      -> This variable is used as (...).
+#   - __BU_MAIN_STAT_DEBUG      -> This variable is used as (...).
 
 
 # Project's debug variable
@@ -9,7 +9,7 @@
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_DEBUG="false"
+__BU_MAIN_STAT_DEBUG="false"
 
 
 # "CheckProjectLogPath()" and other low level's functions authorization to call a "Decho<...>()" function in case of need.
@@ -17,7 +17,7 @@ __BU_MOD_MAIN_STAT_DEBUG="false"
 # This variable only accepts "authorize", "forbid" or "restrict" as values.
 # Default value : "forbid"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_DECHO="forbid"
+__BU_MAIN_STAT_DECHO="forbid"
 
 
 # "CheckProjectLogPath()" function's authorization to call an "Echo<...>()" function in case of need.
@@ -25,7 +25,7 @@ __BU_MOD_MAIN_STAT_DECHO="forbid"
 # This variable only accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_ECHO="false"
+__BU_MAIN_STAT_ECHO="false"
 
 
 # Project's error handling
@@ -33,7 +33,7 @@ __BU_MOD_MAIN_STAT_ECHO="false"
 # This variable accepts "fatal" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_ERROR=""
+__BU_MAIN_STAT_ERROR=""
 
 
 # Project's main log file informations
@@ -41,7 +41,7 @@ __BU_MOD_MAIN_STAT_ERROR=""
 # This variable only accepts "true" or "false" as values.
 # Default value : "true"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_LOG="true"
+__BU_MAIN_STAT_LOG="true"
 
 
 # Project's main log file redirections status
@@ -49,7 +49,7 @@ __BU_MOD_MAIN_STAT_LOG="true"
 # This variable accepts "log", "tee" or nothing as value.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_LOG_REDIRECT=""
+__BU_MAIN_STAT_LOG_REDIRECT=""
 
 
 # Project's authorization to operate at the root directory or one of its sub-folders
@@ -57,7 +57,7 @@ __BU_MOD_MAIN_STAT_LOG_REDIRECT=""
 # This variable accepts "authorized", "forbidden" or "restricted" as values.
 # Default value : "forbidden" (by security).
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_OPERATE_ROOT="forbidden"
+__BU_MAIN_STAT_OPERATE_ROOT="forbidden"
 
 
 # Project initialization's messages displaying.
@@ -65,7 +65,7 @@ __BU_MOD_MAIN_STAT_OPERATE_ROOT="forbidden"
 # This variable accepts "true" or "false" as values.
 # Default value : "false"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_PRINT_INIT_LOG="true"
+__BU_MAIN_STAT_PRINT_INIT_LOG="true"
 
 
 # Project's messages display time
@@ -73,7 +73,7 @@ __BU_MOD_MAIN_STAT_PRINT_INIT_LOG="true"
 # This variable accepts any integer of floating number.
 # Default value : ".5"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_TIME_TXT=".5"
+__BU_MAIN_STAT_TIME_TXT=".5"
 
 
 # Project's translation checker.
@@ -81,7 +81,7 @@ __BU_MOD_MAIN_STAT_TIME_TXT=".5"
 # This variable accepts "true" or "false" as value.
 # Default value : "false" (since the whole project's texts are not yet translated)
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_TRANSLATED="false"
+__BU_MAIN_STAT_TRANSLATED="false"
 
 
 # Project's handling text formatting
@@ -89,7 +89,7 @@ __BU_MOD_MAIN_STAT_TRANSLATED="false"
 # This variable accepts "true" or "false" as value.
 # Default value : "true"
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_TXT_FMT="true"
+__BU_MAIN_STAT_TXT_FMT="true"
 
 
 # User's operating system (getting user's OS is important for OS-dependent processings, like package management)
@@ -97,4 +97,4 @@ __BU_MOD_MAIN_STAT_TXT_FMT="true"
 # This variable will be completed with the "CheckSupportedOSType" function.
 # Default value : "" (no value)
 # shellcheck disable=SC2034
-__BU_MOD_MAIN_STAT_USER_OS=""
+__BU_MAIN_STAT_USER_OS=""
