--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -14,38 +14,37 @@
 __BU_MAIN_ROOT_DIR_PATH="$(cat "$__BU_MODULE_UTILS_ROOT/Bash-utils-root-val.path")"
 
 # Bash Utils sub-folders paths.
-__BU_MAIN_BIN_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "bin")"			# Bash Utils binary files folder            |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_BIN_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "bin")"				# Bash Utils binary files folder            |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 __BU_MAIN_CONF_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_CONFIG_MODULES" "$(ModuleInitializer_GetModuleName "${BASH_SOURCE[0]}")")"	# Bash Utils configuration files folder		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH"
 __BU_MAIN_DOCS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "docs")"			# Bash Utils documentation folder			|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
-__BU_MAIN_LIB_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "lib")"           # Bash Utils library root directory	        |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
-__BU_MAIN_RES_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")"           # Bash Utils resources directory            |   Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_LIB_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "lib")"           	# Bash Utils library root directory	        |	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_RES_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_ROOT_DIR_PATH" "res")"           	# Bash Utils resources directory            |   Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
 
 # Bash Utils dev-tools paths.
-__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_RES_DIR_PATH" "dev-tools")"               # Bash Utils development tools root directory           |	Default parent folder --> "$__BU_MAIN_RES_DIR_PATH/"
-__BU_MAIN_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")"                 # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BU_MAIN_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")"             # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BU_MAIN_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-img")"                 # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BU_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-src")"                 # Bash Utils development tools source files             |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
-__BU_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")"     # Bash Utils development tools translation files folder |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_RES_DIR_PATH" "dev-tools")"              # Bash Utils development tools root directory          	|	Default parent folder --> "$__BU_MAIN_RES_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_BIN="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-bin")"                # Bash Utils development tools binary files folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_DSK="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-desktop")"            # Bash Utils development tools desktop files folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_IMG="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-img")"                # Bash Utils development tools desktop icons folder		|	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_SRC="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-src")"                # Bash Utils development tools source files             |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
+__BU_MAIN_DEVTOOLS_TRANSL="$(ModuleInitializer_FindPath "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH" "dev-translations")"	# Bash Utils development tools translation files folder |	Default parent folder --> "$__BU_MAIN_DEVTOOLS_ROOT_DIR_PATH/"
 
 # "lib" folder's content.
-__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "functions")"                		# Bash Utils functions root directory                         |   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
-__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_FUNCTS_DIR_PATH" "main")"         		    # Bash Utils main functions files directory                   |   Default parent folder --> "$__BU_MAIN_LIB_FUNCTS_DIR_PATH/"
-__BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "lang")"                       		# Bash Utils translations files directory                     |   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
+__BU_MAIN_LIB_FUNCTS_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "$(ModuleInitializer_GetModuleName)")"	# Bash Utils library module's directory		|	Default parent folder --> "$__BU_MAIN_ROOT_DIR_PATH/"
+__BU_MAIN_LIB_LANG_DIR_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "lang")"									# Bash Utils translations files directory	|   Default parent folder --> "$__BU_MAIN_LIB_DIR_PATH/"
 
 # -----------------------------------------------
 
 ## BASH UTIILS FILES PATHS
 
 # "config" folder's content.
-__BU_MAIN_CONF_COLORS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Colors.conf")"                   # Bash Utils color encoding CheckTxtFmts configuration file.
-__BU_MAIN_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "projectInit.conf")"        # Project's initialization CheckTxtFmts.
-__BU_MAIN_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "ProjectStatus.conf")"    # Bash Utils status CheckTxtFmts configuration file.
-__BU_MAIN_CONF_TEXT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Text.conf")"                       # Bash Utils text CheckTxtFmts configuration file.
-__BU_MAIN_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Time.conf")"                       # Bash Utils time CheckTxtFmts configuration file.
+__BU_MAIN_CONF_COLORS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Colors.conf")"			# Bash Utils color encoding variables configuration file.
+__BU_MAIN_CONF_INIT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "projectInit.conf")"			# Project's initialization variables.
+__BU_MAIN_CONF_STATUS_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "ProjectStatus.conf")"		# Bash Utils status variables configuration file.
+__BU_MAIN_CONF_TEXT_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Text.conf")"				# Bash Utils text variables configuration file.
+__BU_MAIN_CONF_TIME_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_CONF_DIR_PATH" "Time.conf")"				# Bash Utils time variables configuration file.
 
 # Bash Utils initializer path.
-__BU_MAIN_LIB_FILE_INITIALIZER_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MAIN_LIB_DIR_PATH" "Initializer.sh")"             # Bash Utils initializer file.
+__BU_MAIN_LIB_FILE_INITIALIZER_FILE_PATH="$(ModuleInitializer_FindPath "$__BU_MODULE_UTILS_MODULES_DIR" "Initializer.sh")"	# Module's initializer file.
 
 # Bash Utils translations path.
 __BU_MAIN_TRANSLATION_FILE_PATH="$__BU_MAIN_LIB_LANG_DIR_PATH/lang.csv"   # Bash Utils translations file.
